--- a/public/index.html
+++ b/public/index.html
@@ -4,21 +4,19 @@
     <meta charset="utf-8" />
     <link rel="icon" href="./fav.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#ff0000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Movie Database using the theme of Netflix UI"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-   
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-   
     <title>Netflix</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-   
   </body>
 </html>
