Updated Favicon location

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="../src/Components/Assets/bookmark_icon.png" />
+    <link rel="icon" href="./bookmark_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ff0000" />
     <meta
