Updated Meta Tag according to Manifest.json

--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,16 @@
     <meta name="theme-color" content="#ff0000" />
     <meta
       name="description"
-      content="Movie Database using the theme of Netflix UI"
+      content="Explore ALL Movies & TV (+ Web Series)!  Search by Genre (Comedy, Action, Horror & more) on our lightning-fast React PWA.  Details, Cast & Crew. #TMDB #Reactjs "
     />
+    <meta name="rating" content="adult" />
+    <meta name="robots" content="index,follow" />
+    <meta name="googlebot" content="index,follow" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Netflix</title>
+    <title>IMDBFlix Entertainment Database</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
