Updated Navigation Section Color

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="./bookmark_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#ff0000" />
+    <meta name="theme-color" content="#db202c" />
     <meta
       name="description"
       content="Explore ALL Movies & TV (+ Web Series)!  Search by Genre (Comedy, Action, Horror & more) on our lightning-fast React PWA.  Details, Cast & Crew. #TMDB #Reactjs "
